--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -2,17 +2,17 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <title>Héroes</title>
-    <script src="/src/main/resources/static/main.js" defer></script>
+    <script src="/js/main.js" defer type="module"></script>
 </head>
 <body>
     <ul>
-        <li th:each="heroe : ${heroes}">
+        <li th:each="heroe : ${heroList}">
             <object-heroe 
-                th:attr="nombre=${heroe.nombre}, 
-                         descripcion=${heroe.descripcion}, 
-                         fecha=${heroe.fecha}, 
-                         foto=${heroe.foto}, 
-                         universo=${heroe.universo}">
+                th:attr="nombre=${heroe.name}, 
+                         descripcion=${heroe.description}, 
+                         fecha=${heroe.yearOfCreation}, 
+                         foto=${heroe.imgUrl}, 
+                         universo=${heroe.category}">
             </object-heroe>
         </li>
     </ul>
