modal editar y ver mas

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -19,15 +19,8 @@
         </div>
     </div>
 
-    <!-- Modal -->
-    <div id="myModal" style="display: none;">
-        <div>
-            <span class="close" onclick="document.getElementById('myModal').style.display='none'">&times;</span>
-            <h2 id="modalTitle"></h2>
-            <p id="modalDescription"></p>
-            <p id="modalFecha"></p>
-            <img class="imgModal" src="" alt="Hero Image">
-        </div>
+    <div id="myModal">
+        
     </div>
 </body>
 </html>
